# socket-gear

./: BUILD.sh  CMakeLists.txt  README.md
example/: server-example.cpp
src/: socketgear-client.cpp  socketgear-client.hpp  socketgear-server.cpp  socketgear-server.hpp  utils.hpp
